--- a/semantic-text-similarity/config/config.yaml
+++ b/semantic-text-similarity/config/config.yaml
@@ -9,9 +9,9 @@ training_args:
   seeds: [50, 60, 70]
   learning_rate: 0.00002  # keep lr small to avoid overfitting
   epochs: 5
-  batch_size: 64
+  batch_size: 32
   root: models
-  save_path: batch_size_32
+  save_path: batch_size_32_epochs_5
   max_num_samples_train: 10
   max_num_samples_validation: 10
 
